Manage Queries UI Completed

--- a/Ecommerce_Admin/src/app/home/home.component.html
+++ b/Ecommerce_Admin/src/app/home/home.component.html
@@ -1,14 +1,14 @@
 <div class="w-100 d-flex home">
     <h3>Welcome, Admin </h3>
     <div class="d-flex justify-content-around w-100 mt-5">
-        <div class="card">
-            <h1 class="display-5" (click)="goTo('tickets')">Resolve Queries</h1>
+        <div class="card" (click)="goTo('tickets')">
+            <h1 class="display-5">Resolve Queries</h1>
         </div>
-        <div class="card">
-            <h1 class="display-5" (click)="goTo('products')">Manage Products</h1>
+        <div class="card" (click)="goTo('products')">
+            <h1 class="display-5">Manage Products</h1>
         </div>
-        <div class="card">
-            <h1 class="display-5" (click)="goTo('users')">Manage User Accounts</h1>
+        <div class="card" (click)="goTo('users')">
+            <h1 class="display-5">Manage Users</h1>
         </div>
     </div>
 </div>
