--- a/Ecommerce_Admin/src/styles.css
+++ b/Ecommerce_Admin/src/styles.css
@@ -4,4 +4,5 @@ body {
     box-sizing: border-box;
     background-color: #f3f3f3;
     height: 100vh;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
