--- a/Ecommerce_Admin/src/app/users/users.component.html
+++ b/Ecommerce_Admin/src/app/users/users.component.html
@@ -1,1 +1,29 @@
-<p>users works!</p>
+<div class="queries-table">
+    <table mat-table [dataSource]="data" class="mat-elevation-z8">
+
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef> Email </th>
+            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="mobileNumber">
+            <th mat-header-cell *matHeaderCellDef> Mobile Number </th>
+            <td mat-cell *matCellDef="let element"> {{element.mobileNumber}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="isUserConfirmed">
+            <th mat-header-cell *matHeaderCellDef> Toggle User Access </th>
+            <td mat-cell *matCellDef="let element"> <mat-slide-toggle (change)="change()">Slide
+                    me!</mat-slide-toggle> </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+</div>
