Admin Application Completed

--- a/Ecommerce_Admin/src/app/app.component.html
+++ b/Ecommerce_Admin/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="admin-header">
-  <header>
-    <h3>E-commerce Admin</h3>
+<!-- <div class="admin-header shadow p-3 bg-info-subtle rounded"> -->
+  <header class="admin-header shadow p-3 bg-info-subtle rounded">
+    <h3><a routerLink="home" class="text-decoration-none">E-commerce Admin</a></h3>
   </header>
-</div>
+<!-- </div> -->
 <router-outlet></router-outlet>
