--- a/Ecommerce_Admin/src/app/product/product.component.html
+++ b/Ecommerce_Admin/src/app/product/product.component.html
@@ -1,6 +1,6 @@
 <div class="container p-4 mt-1">
     <div class="row">
-        <h5 class="display-5 form-heading">Add Product</h5>
+        <h5 class="display-5 form-heading text-center">Add Product</h5>
     </div>
     <form [formGroup]="addProductForm" (ngSubmit)="addproduct()">
         <div class="form-group">
