--- a/Ecommerce_Admin/src/app/app.component.css
+++ b/Ecommerce_Admin/src/app/app.component.css
@@ -1,4 +1,9 @@
 .admin-header {
-    padding: 5px;
-    margin-left: 2%;
+    /* padding: 5px;
+    margin-left: 2%; */
+    height:50px;
+    margin-bottom: 25px;
+}
+a{
+    color: black;
 }
