--- a/Ecommerce_Admin/src/app/product/product.component.css
+++ b/Ecommerce_Admin/src/app/product/product.component.css
@@ -1,10 +1,12 @@
 .container {
     width: 500px;
+    max-height:600px;
+    overflow-y: auto;
     /* border: 1px solid black; */
     border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* justify-content: center; */
     border-radius: 20px;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 
