--- a/Ecommerce_Admin/src/app/users/users.component.html
+++ b/Ecommerce_Admin/src/app/users/users.component.html
@@ -18,8 +18,7 @@
 
         <ng-container matColumnDef="isUserConfirmed">
             <th mat-header-cell *matHeaderCellDef> Toggle User Access </th>
-            <td mat-cell *matCellDef="let element"> <mat-slide-toggle (change)="change()">Slide
-                    me!</mat-slide-toggle> </td>
+            <td mat-cell *matCellDef="let element"> <mat-slide-toggle [checked]="element.isUserConfirmed" (change)="change(element.email,element.isUserConfirmed,element.name)">Toggle User</mat-slide-toggle> </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
